# OTS_Web

./: .gitattributes  .gitignore  AGENTS.md  PLAN.md  README.md  TASK.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
app/: page.tsx
components/: ScoreEditor.tsx  Toolbar.tsx
lib/: webmscore-loader.ts
public/: webmscore.lib.data  webmscore.lib.mem.wasm  webmscore.lib.wasm
public/test_scores/: single_note_c4.musicxml  three_notes_cde.musicxml  two_notes_cc.musicxml
scripts/: check-wasm-cli.js  check-wasm.js  debug-select.js  sync-wasm-cli.js  sync-wasm.js
test_scores/: bach_edits.mscz  bach_orig.mscz
tests/: accidental.spec.ts  articulations.spec.ts  clef-toggle.spec.ts  header-text.spec.ts  key-signature.spec.ts  pitch-multiselect.spec.ts  slur.spec.ts  tempo-text.spec.ts  tie.spec.ts  time-signature.spec.ts  transpose-dragselect.spec.ts  transpose-multiselect.spec.ts  transpose.spec.ts
unit/: ScoreEditor.test.tsx  Toolbar.test.tsx  app-layout.test.tsx  app-page.test.tsx  scripts.test.ts  webmscore-loader.test.ts
webmscore-fork/: .gitignore  .gitmodules
webmscore-fork/.github/workflows/: build.yml
webmscore-fork/fonts/: compact.sh
webmscore-fork/fonts/bravura/: bravura_metadata.json
webmscore-fork/fonts/finalebroadway/: Finale Broadway.json
webmscore-fork/fonts/finalemaestro/: Finale Maestro.json
webmscore-fork/fonts/gootville/: metadata.json
webmscore-fork/fonts/leland/: leland_metadata.json  metadata.json
webmscore-fork/fonts/petaluma/: petaluma_metadata.json
webmscore-fork/src/converter/internal/compat/: notationmeta.cpp  notationmeta.h
webmscore-fork/src/engraving/: engravingmodule.cpp
webmscore-fork/src/engraving/infrastructure/: smufl.cpp
webmscore-fork/src/engraving/internal/: engravingconfiguration.cpp  engravingconfiguration.h
webmscore-fork/src/engraving/libmscore/: chordlist.cpp  figuredbass.cpp  score.h  stafftype.cpp
webmscore-fork/src/engraving/style/: defaultstyle.cpp
webmscore-fork/src/framework/audio/: CMakeLists.txt  audiomodule.cpp
webmscore-fork/src/framework/audio/internal/: audiobuffer.h  audioconfiguration.cpp  audiothread.cpp
webmscore-fork/src/framework/audio/internal/soundtracks/: soundtrackwriter.cpp
webmscore-fork/src/framework/audio/internal/synthesizers/fluidsynth/: fluidresolver.cpp  fluidsynth.cpp
webmscore-fork/src/framework/audio/internal/worker/: mixer.cpp  playback.h
webmscore-fork/src/framework/global/: CMakeLists.txt
webmscore-fork/src/framework/global/internal/: application.cpp
webmscore-fork/src/framework/midi/: midievent.h
webmscore-fork/src/framework/mpe/: mpemodule.cpp
webmscore-fork/src/framework/mpe/internal/: articulationprofilesrepository.cpp  articulationprofilesrepository.h
webmscore-fork/src/importexport/audioexport/internal/: abstractaudiowriter.cpp
webmscore-fork/src/importexport/guitarpro/internal/: importgtp.cpp
webmscore-fork/src/importexport/imagesexport/internal/: svggenerator.cpp  svggenerator.h  svgwriter.cpp
webmscore-fork/src/importexport/midi/: CMakeLists.txt
webmscore-fork/src/importexport/midi/internal/midiimport/: importmidi_operations.cpp
webmscore-fork/src/importexport/midi/internal/midishared/: midifile.h
webmscore-fork/src/importexport/musicxml/: CMakeLists.txt  musicxmlmodule.cpp
webmscore-fork/src/importexport/musicxml/internal/musicxml/: importmxml.cpp  importxml.cpp  musicxmlsupport.cpp  musicxmlsupport.h
webmscore-fork/src/notation/: inotation.h
webmscore-fork/src/notation/internal/: excerptnotation.h  masternotation.cpp  masternotationparts.h  mscnotationwriter.cpp  notation.cpp  notationconfiguration.cpp  notationconfiguration.h  notationelements.h  notationpainting.cpp  notationpainting.h  notationparts.cpp  notationparts.h  notationplayback.cpp  notationplayback.h  searchcommandsparser.cpp  searchcommandsparser.h
webmscore-fork/src/playback/internal/: playbackcontroller.cpp  soundprofilesrepository.h
webmscore-fork/src/project/internal/: notationproject.cpp  notationproject.h  projectmigrator.cpp
webmscore-fork/web/: CMakeLists.txt  Makefile  main.cpp  score.cpp  score.h  wasmres.cpp  wasmres.h
webmscore-fork/web-public/: .gitignore  package-lock.json  package.json  rollup.config.js  tsconfig.json  webmscore.webpack.mjs
webmscore-fork/web-public/src/: helper.js  index.js  nodejs_shim.js  utils.js  worker-helper.js
webmscore-fork/web/audio/: CMakeLists.txt  audio.cpp  audio.h  audiosynth.cpp  audiosynth.h
webmscore-fork/web/importexport/: CMakeLists.txt  positionjsonwriter.cpp  positionjsonwriter.h
